fix: visual issue with date fields on ios (#846)

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1238,6 +1238,8 @@ header #avatar {
 
 .form-group .inline .split50 {
   flex-basis: 50%;
+  display: flex;
+  flex-direction: column;
 }
 
 .form-group.hide,
@@ -1330,13 +1332,20 @@ select {
   height: 50px;
 }
 
-input[type="date"] {
-  flex-grow: 1;
-  width: 100%;
+.date-wrapper {
   display: flex;
+  flex-grow: 0;
+  flex-direction: row;
+  flex-basis: 100%;
+  box-sizing: border-box;
+}
+
+input[type="date"] {
+  display: flex;
+  flex-grow: 1;
   flex-direction: row;
   align-items: center;
-  min-width: 85%;
+  flex-basis: 100%;
   box-sizing: border-box;
 }
 
@@ -2838,7 +2847,27 @@ input[type="radio"]:checked+label::after {
   }
 }
 
+.button.autofill-next-payment {
+    padding: 15px 15px !important;
+    margin-top: 22px;
+}
+
 .autofill-next-payment {
   color: var(--main-color);
   cursor: pointer;
+}
+
+.autofill-next-payment.hideOnDesktop {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .button.autofill-next-payment.hideOnMobile {
+    display: none !important;
+  }
+
+
+  .autofill-next-payment.hideOnDesktop {
+    display: block;
+  }
 }
